--- a/WebBrowser.UI.Net/NewTab.resx
+++ b/WebBrowser.UI.Net/NewTab.resx
@@ -43525,4 +43525,7 @@
         QQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>196, 17</value>
+  </metadata>
 </root>
